--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.4",
     "debug": "^3.1.0",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
+    "nodemailer": "^4.6.5",
     "sequelize": "^4.37.7",
     "tedious": "^2.3.1"
   },
