--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Erick Villalobos Aleman",
   "license": "MIT",
   "dependencies": {
+    "@slack/client": "^4.2.2",
     "body-parser": "^1.18.2",
     "chalk": "^2.4.0",
     "cors": "^2.8.4",
