--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@slack/client": "^4.2.2",
     "body-parser": "^1.18.2",
     "chalk": "^2.4.0",
+    "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.4",
     "debug": "^3.1.0",
     "express": "^4.16.3",
+    "helmet": "^3.12.1",
     "jsonwebtoken": "^8.2.1",
     "moment": "^2.22.2",
     "nodemailer": "^4.6.5",
