--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node server/run.js --presets env",
-    "dev": "set SERVICES=true&& set ENV_NODE=false&& nodemon server/run.js --exec babel-node --presets env",
-    "startpm2": "set SERVICES=true&& set ENV_NODE=true&& pm2 start server/server.js --watch"
+    "dev": "set SERVICES=false&& set ENV_NODE=false&& nodemon server/run.js --exec babel-node --presets env",
+    "startpm2": "set SERVICES=true&& set ENV_NODE=true&& pm2 start server/server.js --watch -i 2"
   },
   "author": "Erick Villalobos Aleman",
   "license": "MIT",
