--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Boilerplate con Express, Babel y ECMAscript 6",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node server/run.js --presets env",
+    "start": "set SERVICES=true&& set ENV_NODE=true&& node server/server.js",
     "dev": "set SERVICES=false&& set ENV_NODE=false&& nodemon server/run.js --exec babel-node --presets env",
     "startpm2": "set SERVICES=true&& set ENV_NODE=true&& pm2 start server/server.js -i 2"
   },
