--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.4",
     "debug": "^3.1.0",
     "express": "^4.16.3",
+    "flat-cache": "^1.3.0",
     "helmet": "^3.12.1",
     "jsonwebtoken": "^8.2.1",
     "moment": "^2.22.2",
